--- a/app/views/instances/_show_game_settings.html.erb
+++ b/app/views/instances/_show_game_settings.html.erb
@@ -20,10 +20,7 @@
         <p>Imposter:</p>
     </div>
     <div>
-    <select class="form-select" aria-label="Default select example">
-        <option selected>Yes</option>
-        <option value="No">No</option>
-    </select>
+        No <!-- Imposter column here -->
     </div>
 </div>
 <div class="d-flex justify-content-between">
