--- a/app/views/instances/_update_modal.html.erb
+++ b/app/views/instances/_update_modal.html.erb
@@ -6,7 +6,7 @@ Settings
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm modal-dialog-centered">
-    <div class="modal-content bg-primary">
+    <div class="modal-content bg-primary" id="settings-modal">
       <div class="modal-body">
         <%= render "instance_update_form", instance: instance %>
       </div>
