--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,31 +3,35 @@
   <div id="de-bored-games" style="height: 100vh;">
   <div class="row justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-      <h1 class="p-5">De.Bored Games</h1>
 
       <p>You are logged in as: <%= current_user.nickname %></p>
         <%= render "components/nickname_modal", locals: { current_user: current_user } %>
 
+        <h1 class="p-2">Games</h1>
           <% @games.each do |game| %>
             <!-- Card space for Front End Master Hiro -->
-        <div id="game-index" class="card d-flex flex-column align-items-center justify-content-center p-3 shadow">
-          <div>
-            <h3><%= game.name%></h3>
+            <div id="game-index" class="card d-flex flex-column align-items-center justify-content-center p-3 m-3 shadow">
+              <div>
+                <h3><%= game.name%></h3>
+              </div>
+                  <!-- Buttons "Join" and "Create" -->
+              <% if game.name == "Never Have I Ever" %>
+                <div class="d-flex justify-content-around w-100">
+                  <div>
+                    <%= link_to instances_path(game_id: game.id), method: :post do %>
+                      <div class="btn btn-primary">Create a lobby</div>
+                    <% end %>
+                  </div>
+                  <div>
+                    <%= render "components/modal" %>
+                  </div>
+                </div>
+              <% else %>
+            <!-- Coming Soon! -->
+              <p>Coming Soon!</p>
+            <% end %>
           </div>
-
-            <!-- Buttons "Join" and "Create" -->
-            <div class="d-flex justify-content-around w-100">
-              <div>
-                <%= link_to instances_path(game_id: game.id), method: :post do %>
-                  <div class="btn btn-primary">Create a lobby</div>
-                <% end %>
-              </div>
-              <div>
-                <%= render "components/modal" %>
-              </div>
-            </div>
-          <% end %>
-        </div>
+        <% end %>
       </div>
     </div>
 
