--- a/app/views/instances/_instance_update_form.html.erb
+++ b/app/views/instances/_instance_update_form.html.erb
@@ -12,7 +12,7 @@
       <%= f.input :max_rounds,  label: false, input_html: { min: '2'} %>
     </div>
     <div class="d-flex justify-content-between">
-      <%= f.label :pin, "Pin Number" %>
+      <%= f.label :pin, "Pin Number" %> <!-- Will be replace by imposter when implemented -->
       <%= f.text_field :pin, label: false, class:"form-control" %>
     </div>
     <div class="pt-3">
