Fixed the login-logout

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,16 +8,14 @@
     <span class="navbar-toggler-icon"></span>
   </button>
     <ul class="navbar-nav">
-      <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link btn btn-primary p-2" %>
-        </li>
-        </div>
-      <% else %>
+      <% if current_user.guest? %>
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link btn btn-primary p-2" %>
         </li>
+      <% else %>
+        <li class="nav-item active">
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link btn btn-primary p-2" %>
+        </li>
       <% end %>
     </ul>
-  </div>
 </div>
