--- a/app/views/rounds/_show_question.erb
+++ b/app/views/rounds/_show_question.erb
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center align-items-center h-100">
     <div class="text-center">
       <h5>Round <%= round.number %></h5>
-      <h3>Never Have I ever <%= game_content.content %></h3>
+      <h3>Have you ever <%= game_content.content %>?</h3>
 
       <div class="p-4">
         <div class="row justify-content-center">
