--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -19,7 +19,17 @@
     </div>
 
     <% if @current_user.id == @instance.user_id %>
-      <% if @round.number < @instance.max_rounds %>
+      <% if @round.number == @instance.max_rounds - 1 %>
+        <div class="py-4 row justify-content-center" id="host-buttons">
+          <%= simple_form_for([@instance, Round.new]) do |f| %>
+            <div class="col-6">
+              <%= hidden_field_tag 'current_round', @round.id %>
+              <%= f.submit "Final Round", class:"btn btn-primary" %>
+            </div>
+          <% end %>
+        </div>
+
+      <% elsif @round.number < @instance.max_rounds %>
         <div class="py-4 row justify-content-center" id="host-buttons">
           <%= simple_form_for([@instance, Round.new]) do |f| %>
             <div class="col-6">
@@ -34,16 +44,16 @@
           <%= simple_form_for Instance.new do |f| %>
             <%# needed for creating a new instance %>
             <div class="col-6">
-            <%= hidden_field_tag 'game_id', @game_id %>
-            <%# needed to broadcast the redirect %>
-            <%= hidden_field_tag 'round_id', @round.id %>
-            <%# needed for creating players in the new instance, gives us a string of user ids like so "8 9 10 22" %>
-            <%= hidden_field_tag :concatenated_user_ids, @non_host_player_user_ids %>
-            <%= f.submit "Exit Game", class: "btn btn-warning" %>
+              <%= hidden_field_tag 'game_id', @game_id %>
+              <%# needed to broadcast the redirect %>
+              <%= hidden_field_tag 'round_id', @round.id %>
+              <%# needed for creating players in the new instance, gives us a string of user ids like so "8 9 10 22" %>
+              <%= hidden_field_tag :concatenated_user_ids, @non_host_player_user_ids %>
+              <%= f.submit "Exit Game", class: "btn btn-warning" %>
             </div>
           <% end %>
         </div>
       <% end %>
     </div>
-    <% end %>
+  <% end %>
 <% end %>
