--- a/app/views/instances/_show_game_settings.html.erb
+++ b/app/views/instances/_show_game_settings.html.erb
@@ -24,6 +24,6 @@
     </div>
 </div>
 <div class="d-flex justify-content-between">
-    <p>Instance pin:</p>
-    <p><%= instance.pin %></p>
+    <p>Passcode:</p>
+    <p><%= instance.passcode %></p>
 </div>
