--- a/app/views/rounds/_show_question.erb
+++ b/app/views/rounds/_show_question.erb
@@ -1,8 +1,12 @@
 <div class="container-fluid" style="height: 75vh;">
   <div class="d-flex justify-content-center align-items-center h-100">
     <div class="text-center">
-      <h5>Round <%= round.number %></h5>
-      <h3>Have you ever <%= game_content.content %>?</h3>
+      <% if instance.max_rounds == round.number %>
+        <h5>Last Round</h5>
+      <% else %>
+        <h5>Round <%= round.number %></h5>
+      <% end %>
+        <h3>Have you ever <%= game_content.content %>?</h3>
 
       <div class="p-4">
         <div class="row justify-content-center">
