changed to Last Round if game reached the max round

--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -5,7 +5,7 @@
   <div class="container-fluid">
     <% if @instance.max_rounds == @round.number %>
       <div>
-        <h3 class="py-4 text-center">Last Round's</h3>
+        <h3 class="py-4 text-center">Last Round's Results</h3>
       </div>
     <% else %>
       <div>
