--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -48,13 +48,17 @@ $body-color: white;
 }
 
 #game-index{
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(117, 19, 93, 0.73)), url("assets/party.jpg");
     background-size: cover;
     background-position-y: center;
 }
 
 #game-list{
     border: 2px solid black
+}
+
+#game-name{
+    text-shadow: 2px 2px 2px black;
+    font-weight: bolder;
 }
 
 #modal{
