--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -12,7 +12,7 @@
             <!-- Card space for Front End Master Hiro -->
             <div id="game-index"
               class="card d-flex flex-column align-items-center justify-content-center p-3 m-3 shadow"
-              style="background-image: url( <%= image_path 'party.jpg' %> )">
+              style="background-image: url( <%= image_path game.image %> )">
               <div>
                 <h3 id="game-name" ><%= game.name%></h3>
               </div>
