--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -6,35 +6,36 @@
       <p>You are logged in as: <%= current_user.nickname %></p>
         <%= render "components/nickname_modal", locals: { current_user: current_user } %>
 
-        <h1 class="p-2">Games</h1>
-          <% @games.each do |game| %>
-            <!-- Card space for Front End Master Hiro -->
-            <div id="game-index"
-              class="card d-flex flex-column align-items-center justify-content-center p-3 m-3 shadow"
-              style="background-image: url( <%= image_path game.image %> )">
-              <div>
-                <h3 id="game-name" ><%= game.name%></h3>
-              </div>
-                  <!-- Buttons "Join" and "Create" -->
-              <% if game.name == "Never Have I Ever" %>
-                <div class="d-flex justify-content-around w-100">
-                  <div>
-                    <%= link_to instances_path(game_id: game.id), method: :post do %>
-                      <div class="btn btn-primary">Create a lobby</div>
-                    <% end %>
-                  </div>
-                  <div>
-                    <%= render "components/modal" %>
-                  </div>
+      <h1 class="p-2">Games</h1>
+        <% @games.each do |game| %>
+          <!-- Card space for Front End Master Hiro -->
+          <div
+            id="game-index"
+            class="card d-flex flex-column align-items-center justify-content-center p-3 m-3 shadow"
+            style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url( <%= image_path game.image %> )"
+          >
+            <div>
+              <h3 id="game-name" ><%= game.name%></h3>
+            </div>
+                <!-- Buttons "Join" and "Create" -->
+            <% if game.name == "Never Have I Ever" %>
+              <div class="d-flex justify-content-around w-100">
+                <div>
+                  <%= link_to instances_path(game_id: game.id), method: :post do %>
+                    <div class="btn btn-primary">Create a lobby</div>
+                  <% end %>
                 </div>
-              <% else %>
-            <!-- Coming Soon! -->
+                <div>
+                  <%= render "components/modal" %>
+                </div>
+              </div>
+            <% else %>
+              <!-- Coming Soon! -->
               <p>Coming Soon!</p>
             <% end %>
           </div>
         <% end %>
       </div>
     </div>
-
   </div>
 </div>
