--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-12 text-center">
 
-      <p>You are logged in as: <%= current_user.nickname %></p>
+      <p>Your nickname is: <%= current_user.nickname %></p>
         <%= render "components/nickname_modal", locals: { current_user: current_user } %>
 
       <h1 class="p-2">Games</h1>
