--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,8 @@
-<div class="background" style="background-color: #001219; height:100vh">
+<div id="homepage">
   <%= render "logo" %>
-
   <div class="text-center">
     <%= link_to games_path do %>
-      <div class="btn btn-warning">Discover</div>
+      <div id="play-now" class="btn btn-warning d-none" style="font-size: 1.75rem;">Play Now</div>
     <% end %>
   </div>
 </div>
