--- a/app/views/pages/_logo.html.erb
+++ b/app/views/pages/_logo.html.erb
@@ -1,7 +1,7 @@
 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In  -->
 <div id="de-bored-logo">
 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In  -->
-<svg id="svg-logo" x="0px" y="0px" width="250px" height="70px" viewBox="-1 0 200 50">
+<svg id="svg-logo" x="0px" y="0px" width="275px" height="100px" viewBox="-1 0 200 50">
 <path class="path" stroke="#e42c63" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="transparent" d="M25.9,0.6c0-0.3-0.1,0.2-0.2,1.5c-0.2,1.7-0.3,4-0.4,6.7c-0.1,3.1-0.2,6.5-0.2,10.5c0,6.5,0.2,11,0.5,13.8
 	c0,0.3,0,0.5,0,0.6c0,0.2-0.1,0.3-0.4,0.3C24.8,34,22.8,34,19.2,34c-0.1,0-0.1,0-0.2,0c-0.7,0-1.2-0.6-1.3-1.3l-0.1-1
 	c0-0.1-0.1-0.3-0.2-0.4c-0.1,0-0.2,0.1-0.4,0.3c-1.7,1.7-3.8,2.5-6.3,2.5c-3.3,0-5.9-1.2-7.9-3.5c-1.9-2.2-2.8-5-2.8-8.3
@@ -44,7 +44,7 @@
 	c0.4-1.8,0.1-3.4-1.1-4.7c-0.9-0.9-1.9-1.4-3.1-1.4c-1.3,0-2.3,0.5-3.1,1.4s-1.1,2-1.1,3.3c0,1.3,0.4,2.3,1.1,3.2
 	c0.8,0.9,1.8,1.4,3,1.4c1.7,0,3-0.9,4-2.6C181,24,181.1,23.8,181.1,23.6z"/>
 </svg>
-  <div>
+  <div class="py-2">
     <p class="de-bored-quote">Break the awkward <strong id="silence">silence</strong> </p>
   </div>
 </div>
