--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-transparent navbar-lewagon">
 
   <%= link_to root_path, class: "navbar-brand" do %>
-   <h2 style="font-family:'Pacifico', cursive; color:#c4ceff">de.bored</h2>
+   <div class="btn btn-danger">Home</div>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
