--- a/app/views/instances/_instance_update_form.html.erb
+++ b/app/views/instances/_instance_update_form.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="d-flex justify-content-between">
       <%= f.label :max_players, "Max Players" %>
-      <%= f.input :max_players, label: false, input_html: { min: '2', max: "10"}%>
+      <%= f.input :max_players, label: false, input_html: { min: @players.count, max: "10"}%>
     </div>
     <div class="d-flex justify-content-between">
       <%= f.label :max_rounds, "Rounds" %>
