--- a/app/views/instances/_show_waiting.erb
+++ b/app/views/instances/_show_waiting.erb
@@ -35,12 +35,11 @@
     </div>
     
     <!-- From this line, only Host can see/use this -->
-    <% if current_user.present? && current_user.id == @instance.user_id %>
+    <% if current_user.present? && current_user.id == instance.user_id %>
     <div class="col-12 justify-content-center text-center py-3">
       <div class="row">
         <div class="col-6">
-          <% @round = Round.new %>
-          <%= simple_form_for([@instance, @round]) do |f| %>
+          <%= simple_form_for([instance, Round.new]) do |f| %>
             <%= f.submit "Start Game", class:"btn btn-primary" %>
           <% end %>
         </div>
