refactor of instace creation + preserving last instance settings

--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -50,11 +50,10 @@
           <%= simple_form_for Instance.new do |f| %>
             <%# needed for creating a new instance %>
             <div class="col-6">
-              <%= hidden_field_tag 'game_id', @game_id %>
               <%# needed to broadcast the redirect %>
               <%= hidden_field_tag 'round_id', @round.id %>
-              <%# needed for creating players in the new instance, gives us a string of user ids like so "8 9 10 22" %>
-              <%= hidden_field_tag :concatenated_user_ids, @non_host_player_user_ids %>
+              <%# needed to get last_instance_id for creation of new instance %>
+              <%= hidden_field_tag 'last_instance_id', @instance.id %>
               <%= f.submit "Exit Game", class: "btn btn-warning" %>
             </div>
           <% end %>
