--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,4 +1,10 @@
-.navbar-lewagon {
+.navbar {
   justify-content: space-between;
   background: transparent;
+}
+
+a {
+  color: white;
+  margin: 0;
+  padding: 0;
 }
