--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,21 +1,36 @@
-<div class="navbar navbar-expand-sm navbar-transparent navbar-lewagon">
+<div class="navbar navbar-expand-xl navbar-transparent mt-2">
 
-  <%= link_to root_path, class: "navbar-brand" do %>
-   <div class="btn btn-danger">Home</div>
-  <% end %>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+  <button class="btn btn-info" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="">Menu</div>
   </button>
-    <ul class="navbar-nav">
-      <% if current_user.guest? %>
-        <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link btn btn-primary p-2" %>
-        </li>
-      <% else %>
-        <li class="nav-item active">
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link btn btn-primary p-2" %>
-        </li>
-      <% end %>
+
+  <span class="navbar-text">
+    Hello <%= current_user.nickname %>
+  </span>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <% if current_user.guest? %>
+          <%= link_to "Login", new_user_session_path %>
+        <% else %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+        <% end %>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="#">Edit your nickname</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="#">Support us</a>
+      </li>
     </ul>
+  </div>
+
+  <!--
+    <button class="navbar-brand">
+
+    </button>
+  -->
 </div>
