--- a/app/views/components/_nickname_modal.html.erb
+++ b/app/views/components/_nickname_modal.html.erb
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#nickname-modal" id="nickname-btn">Edit your nickname</button>
+<a href="#nickname-modal" data-toggle="modal" data-target="#nickname-modal">Edit your nickname</a>
 <div class="modal fade" id="nickname-modal" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div id="modal" class="modal-content w-75 m-auto">
