autp focus on form when clicked

--- a/app/views/components/_modal.html.erb
+++ b/app/views/components/_modal.html.erb
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#join-modal">Join a lobby</button>
+<button id="join-btn" type="button" class="btn btn-warning" data-toggle="modal" data-target="#join-modal">Join a lobby</button>
 <div class="modal fade" id="join-modal" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div id="modal" class="modal-content m-auto" style="width: 250px;">
