Make sure navbar is always collapsed

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-xl navbar-transparent mt-2">
+<div class="navbar navbar-collapse navbar-transparent mt-2">
 
   <button class="btn btn-info" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <div class="">Menu</div>
