Impostor always true

--- a/app/views/instances/_show_game_settings.html.erb
+++ b/app/views/instances/_show_game_settings.html.erb
@@ -17,10 +17,10 @@
 </div>
     <div class="imposter d-flex justify-content-between">
     <div>
-        <p>Imposter:</p>
+        <p>Impostor:</p>
     </div>
     <div>
-        No <!-- Imposter column here -->
+        Yes <!-- Imposter column here -->
     </div>
 </div>
 <div class="d-flex justify-content-between">
