--- a/app/views/instances/_player_list.erb
+++ b/app/views/instances/_player_list.erb
@@ -1,6 +1,8 @@
 <% players.each do |player| %>
     <% user = User.find(player.user_id)%>
-    <div id="card" class="card shadow-sm p-3 my-1 rounded">
-        <%= user.nickname%>
+    <div id="card" class="card shadow-sm py-2 px-3 my-1 rounded">
+        <div class="d-flex justify-content-between">
+            <p class="align-self-center m-0" style="font-size: 1.5rem;"><%= user.nickname%></p>
+        </div>
     </div>
 <% end %>
