--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,10 +3,11 @@
   <button class="btn btn-info" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <div class="">Menu</div>
   </button>
-
-  <span class="navbar-text">
-    Hello <%= current_user.nickname %>
-  </span>
+  <div class="card bg-secondary px-2" style="border: 2px solid black">
+    <span class="navbar-text">
+      Hello, <%= current_user.nickname %>!
+    </span>
+  </div>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
