--- a/app/views/instances/_show_game_settings.html.erb
+++ b/app/views/instances/_show_game_settings.html.erb
@@ -1,4 +1,12 @@
 <h5 class="text-center">Game Settings</h5>
+<div class="games d-flex justify-content-between">
+        <div>
+        <p> Game: </p>
+    </div>
+    <div>
+    <%= instance.game.name %>
+    </div>
+</div>
 <div class="players d-flex justify-content-between">
     <div>
         <p>Max Players:</p>
