--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -1,66 +1,9 @@
 <% if @round.number.zero? %>
-    <%= render 'show_impostor', current_player_is_impostor: @current_player_is_impostor %>
+  <%# next line is needed for the hidden action-cable %>
+  <div id="inputs" data-round-id="<%= @round.id %>"></div>
+  <%= render 'show_impostor', current_player_is_impostor: @current_player_is_impostor %>
 <% elsif @round.phase == 1 %>
   <%= render 'show_question', instance: @instance, round: @round, game_content: @game_content %>
-
 <% elsif @round.phase == 2 %>
-  <div class="container-fluid">
-    <% if @instance.max_rounds == @round.number %>
-      <div>
-        <h3 class="py-4 text-center">Last Round's Results</h3>
-      </div>
-    <% else %>
-      <div>
-        <h3 class="py-4 text-center">Round <%= @round.number %> Results</h3>
-      </div>
-    <% end %>
-    <div class="py-2 text-center">
-      <p>Have you ever <%= @game_content.content %>?</p>
-    </div>
-    <div class="row justify-content-center" style="height: 50vh">
-      <div id="results" class="col-lg-4 col-md-6 col-sm-12">
-        <div id="inputs" data-round-id="<%= @round.id %>">
-          <!-- Player inputs @ app/views/player_inputs/_player_input.html.erb-->
-          <%= render 'player_inputs/player_input', round: @round %>
-        </div>
-      </div>
-    </div>
-
-    <% if @current_user.id == @instance.user_id %>
-      <% if @round.number == @instance.max_rounds - 1 %>
-        <div class="py-4 row justify-content-center" id="host-buttons">
-          <%= simple_form_for([@instance, Round.new]) do |f| %>
-            <div class="col-6">
-              <%= hidden_field_tag 'current_round', @round.id %>
-              <%= f.submit "Final Round", class:"btn btn-primary" %>
-            </div>
-          <% end %>
-        </div>
-
-      <% elsif @round.number < @instance.max_rounds %>
-        <div class="py-4 row justify-content-center" id="host-buttons">
-          <%= simple_form_for([@instance, Round.new]) do |f| %>
-            <div class="col-6">
-              <%= hidden_field_tag 'current_round', @round.id %>
-              <%= f.submit "Next Round", class:"btn btn-primary" %>
-            </div>
-          <% end %>
-        </div>
-
-      <% else %>
-        <div class="py-4 row justify-content-center" id="host-buttons">
-          <%= simple_form_for Instance.new do |f| %>
-            <%# needed for creating a new instance %>
-            <div class="col-6">
-              <%# needed to broadcast the redirect %>
-              <%= hidden_field_tag 'round_id', @round.id %>
-              <%# needed to get last_instance_id for creation of new instance %>
-              <%= hidden_field_tag 'last_instance_id', @instance.id %>
-              <%= f.submit "Exit Game", class: "btn btn-warning" %>
-            </div>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-  <% end %>
+  <%= render 'show_answers', instance: @instance, round: @round, game_content: @game_content, current_user: @current_user %>
 <% end %>
