--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -2,9 +2,8 @@
   <div class="d-flex justify-content-center align-items-center h-100">
     <div class="text-center">
       <% @votes.each do |vote| %>
-        <p><%= vote.voter %></p>
+        <p><%= vote.voter.nickname %> voted for <%= vote.voted_player.nickname %></p>
       <% end %>
-
 
       <button class="btn btn-primary">Future End Game button</button>
     </div>
