--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -15,7 +15,7 @@
               <h3 id="game-name" ><%= game.name%></h3>
             </div>
                 <!-- Buttons "Join" and "Create" -->
-            <% if game.name == "Have You Ever?" %>
+            <% unless game.name == "Fill the Blank!" || game.name == "Spank the Bank!" %>
               <div class="d-flex justify-content-around w-100">
                 <div>
                   <%= link_to instances_path(game_id: game.id), method: :post do %>
