just a small detail to determine number of players who answered

--- a/app/views/rounds/_show_answers.html.erb
+++ b/app/views/rounds/_show_answers.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="d-flex">
-    <p>Player voted:</p> 
+    <p>Player answered:</p> 
     <div class="px-1" id="player-input-count">
       <%= render "show_player_inputs_count", round: round %>
     </div>/ 
