auto refresh div to update it

--- a/app/views/instances/_player_list.erb
+++ b/app/views/instances/_player_list.erb
@@ -1,8 +1,10 @@
-<% players.each do |player| %>
-    <% user = User.find(player.user_id)%>
-    <div id="card" class="card shadow-sm py-2 px-3 my-1 rounded">
-        <div class="d-flex justify-content-between">
-            <p class="align-self-center m-0" style="font-size: 1.5rem;"><%= user.nickname%></p>
+<div id="updateThis" >
+    <% players.each do |player| %>
+        <% user = User.find(player.user_id)%>
+        <div id="card" class="card shadow-sm py-2 px-3 my-1 rounded">
+            <div class="d-flex justify-content-between">
+                <p class="align-self-center m-0" style="font-size: 1.5rem;"><%= user.nickname%></p>
+            </div>
         </div>
-    </div>
-<% end %>
+    <% end %>
+</div>
