--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -24,7 +24,18 @@
               </div>
               <div class="col-6">
                 <h4>Imposter: <%=  @impostor.nickname %></h4>
-                <h2><%= @win_or_lose %></h2>
+
+                <% @vote_tally.each do |voted, count| %>
+                  <% voted_player = Player.find(voted).nickname %>
+                  <!-- Compare if player is an imposter and have the highest votes received -->
+                  <% if (voted_player == @impostor.nickname) %>
+                    <% if (@highest_vote == count) %>
+                      <p><%= "Imposter #{@impostor.nickname} lose!"%></p>
+                    <% else %>
+                      <p><%= "Imposter #{@impostor.nickname} won!"%></p>  
+                    <% end %> 
+                  <% end %>
+                <% end %>
               </div>
             </div>
           </div>
