Share and Download results button

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -6,7 +6,18 @@
     border: 6px solid #035e7a;
     border-style: groove;
 }
-#settings-modal{
+#settings-modal, #share-modal{
     border: 6px solid #293d96;
     border-style: groove;
+}
+
+#share-modal {
+  position: relative;
+}
+
+.a2a_kit {
+  display: flex;
+  position: absolute;
+  top: 30px;
+  left: 30px;
 }
