--- a/app/views/instances/_instance_update_form.html.erb
+++ b/app/views/instances/_instance_update_form.html.erb
@@ -3,10 +3,6 @@
     <div class="mb-4" style="border-bottom: 1px solid #033b4d">
       <h5>Game Settings</h5>
     </div>
-      <div class="d-flex justify-content-between">
-        <%= f.label :game, "Game" %>
-        <%= f.select :game, Game.first(3).map { |g| [g.name, g.id] } %>
-    </div>
     <div class="d-flex justify-content-between">
       <%= f.label :max_players, "Max Players" %>
       <%= f.input :max_players, label: false, input_html: { min: @players.count, max: "10"}%>
@@ -14,6 +10,10 @@
     <div class="d-flex justify-content-between">
       <%= f.label :max_rounds, "Rounds" %>
       <%= f.input :max_rounds,  label: false, input_html: { min: '2'} %>
+    </div>
+    <div class="d-flex justify-content-between">
+      <%= f.label :game, "Game" %>
+      <%= f.input :game, label: false, input_html: { value: 'Have you ever?' } %>
     </div>
     <div class="pt-3">
         <%= f.submit "Update Settings", class:"btn btn-warning" %>
