--- a/app/views/instances/_show_waiting.erb
+++ b/app/views/instances/_show_waiting.erb
@@ -1,5 +1,29 @@
 <div class="container-fluid">
-  <h3 class="py-4 text-center"><%= game.name %></h3>
+  <h3 class="my-3 text-center"><%= game.name %></h3>
+
+  <!-- Start Button only for Host -->
+  <div class="col-12 justify-content-center text-center py-3">
+    <div class="row">
+      <% if current_user.present? && current_user.id == @instance.user_id %>
+        <div class="col-6">
+          <% @round = Round.new %>
+          <%= simple_form_for([@instance, @round]) do |f| %>
+            <%= f.submit "Start Game", class:"btn btn-primary" %>
+          <% end %>
+        </div>
+
+        <div class="col-6">
+          <!-- Delete Instance button only for Host -->
+          <%= link_to "Back", instance_path(@instance), method: :delete, class: "btn btn-warning" %>
+        </div>
+      <% else %>
+        <div class="col-6">
+          <!-- Leave Instance button for players -->
+          <%= link_to "Leave lobby", instance_player_path(@instance, @players), method: :delete, class: "my-2 btn btn-warning" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 
   <div class="row justify-content-around">
     <div id="players" class="col-lg-6 col-md-4 col-sm-6 p-3 my-1" style="height: 360px; overflow: auto;">
@@ -34,7 +58,7 @@
       <div id="game-config">
         <%= render "show_game_settings",instance: instance %>
       </div>
-  
+
       <!-- From this line, only Host can see/use this -->
       <% if current_user.present? && current_user.id == @instance.user_id %>
         <div class="col-12 justify-content-center text-center py-3">
@@ -49,24 +73,6 @@
             </div>
           </div>
         </div>
-            <!-- Start Button -->
-        <div class="col-12 justify-content-center text-center py-3">
-          <div class="row">
-            <div class="col-6">
-              <% @round = Round.new %>
-              <%= simple_form_for([@instance, @round]) do |f| %>
-                <%= f.submit "Start Game", class:"btn btn-primary" %>
-              <% end %>
-            </div>
-            <div class="col-6">
-              <!-- Delete Instance button -->
-              <%= link_to "Back", instance_path(@instance), method: :delete, class: "my-2 btn btn-warning" %>
-            </div>
-          </div>
-        </div>
-      <% else %>
-        <!-- Leave Instance button -->
-        <%= link_to "Leave lobby", instance_player_path(@instance, @players), method: :delete, class: "my-2 btn btn-warning" %>
       <% end %>
 
     </div>
