--- a/app/views/rounds/_show_impostor.html.erb
+++ b/app/views/rounds/_show_impostor.html.erb
@@ -1,8 +1,14 @@
 <div class="container-fluid" style="height: 75vh;">
   <div class="d-flex justify-content-center align-items-center h-100">
     <div class="text-center">
-      <h5>Are you the impostor?</h5>
-      <h5> <%= current_player_is_impostor ? "Yes you are the impostor!" : "No you are not the impostor." %> </h5>
+      <% if current_player_is_impostor %>
+        <h3 class="notification">You are the impostor!</h3>
+        <h5>Your job is to lie to your friends and to not get caught.</h5>
+      <% else %>
+        <h3 class="notification">You are not the impostor!</h3>
+        <h5>Good! Be honest with your friends and answer the questions sincerely.</h5>
+      <% end %>
+
       <div class="d-none">
         <% if current_user.id == @instance.user_id %>
           <%= simple_form_for([@instance, Round.new]) do |f| %>
@@ -11,6 +17,7 @@
           <% end %>
         <% end %>
       </div>
+
       <div class="py-5" style="height: 200px">
         <div id="ready" class="d-none">
           <h3>Are you Ready?</h3>
@@ -19,7 +26,6 @@
           <h3>Game will start in:</h3>
           <h3 id="time">5</h3>
         </div>
-      </div>
       </div>
     </div>
   </div>
