--- a/app/views/votes/new.html.erb
+++ b/app/views/votes/new.html.erb
@@ -4,9 +4,11 @@
       <h3 class="mb-4">Who do you think was the impostor?</h3>
 
       <% @players.each do |player| %>
-        <%= simple_form_for([@instance, @vote]) do |f| %>
-          <%= hidden_field_tag :voted_player, player.id %>
-          <%= f.submit player.nickname, class:"btn btn-info my-2" %>
+        <% if @current_user.id != player.user_id %> <!-- Cannot vote for yourself -->
+          <%= simple_form_for([@instance, @vote]) do |f| %>
+            <%= hidden_field_tag :voted_player, player.id %>
+            <%= f.submit player.nickname, class:"btn btn-info my-2" %>
+          <% end %>
         <% end %>
       <% end %>
 
