aligned chart on MOBILE

--- a/app/views/results/_result_chart.html.erb
+++ b/app/views/results/_result_chart.html.erb
@@ -1,4 +1,7 @@
-<h3> Results </h3>
-<%= pie_chart @vote_tally.each do |voted, count|%>
-  <%= Player.find(voted).nickname.group(total_votes).count  %>
-<% end %>
+<div class="row justify-content-center align-items-center pt-3">
+  <div class="col-8">
+    <%= pie_chart @vote_tally.each do |voted, count|%>
+      <%= Player.find(voted).nickname.group(total_votes).count  %>
+    <% end %>
+  </div>
+</div>
