--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-12">
-        <h1 class="my-4 text-center">Vote Result</h1>
+        <h1 class="my-4 text-center">Game Results</h1>
 
         <!-- Partial for Imposter reveal -->
         <div id="imposter-reveal" class="my-2 text-center" style="height:10vh; border: 1px solid black">
